[package]
name = "cargo-info"
version = "0.7.6"
authors = ["Cyril Plisko <cyril.plisko@mountall.com>"]
categories = ["development-tools::cargo-plugins"]
description = "Extends cargo to query crates.io registry for crates details"
documentation = "https://docs.rs/cargo-info"
keywords = ["cargo", "info", "subcommand"]
license = "Apache-2.0/MIT"
repository = "https://gitlab.com/imp/cargo-info.git"
edition = "2021"

[badges]
travis-ci = { repository = "imp/cargo-info" }
gitlab = { repository = "imp/cargo-info" }

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false }
chrono-humanize = "0.2"
clap = { version = "4.3", features = ["derive"] }
crates_io_api = { version = "0.8", default-features = false }
fmtools = "0.1"

[features]
default = ["crates_io_api/default"]
rustls = ["crates_io_api/rustls"]
pedantic = []
